--- a/css/post.css
+++ b/css/post.css
@@ -83,6 +83,13 @@ h6 {
         font-size: 25px;
     }
 
+    .content-post{
+        padding: 0px;
+    }
+    .container-post span{
+        text-align: center;
+    }
+
     footer{
         flex-direction: column;
     }
